...
        <View className="flex-1">
            <Tabs screenOptions={screenOptions}>
                <Tabs.Screen
                    name="unlock"
                    options={{
                        title: "Unlock",
                        tabBarAccessibilityLabel: "Unlock vault",
                        tabBarIcon: ({ focused }) => (
                            <LockedNavIcon
                                icon={LockKeyhole}
                                focused={focused}
                            />
                        ),
...
