...
                    title: "Devices",
                    tabBarAccessibilityLabel: "Devices",
                }}
            />
            <Tabs.Screen
                name="settings"
                options={{ title: "More", tabBarAccessibilityLabel: "More" }}
            />
        </Tabs>
    );
}

