...
        handleSubmit,
        formState: { errors },
    } = useForm<Import.FieldsSchemaType>({
        resolver: zodResolver(Import.FieldsSchema),
        defaultValues: {
            Name: "",
            Username: "",
            Password: "",
            TOTP: "",
            Tags: "",
            URL: "",
            Notes: "",
            DateCreated: "",
            DateModified: "",
...
                    showSecretHelpText={true}
                />
            </Body>

            <Footer className="space-y-3 sm:space-x-5 sm:space-y-0">
                <ButtonFlat
                    text="Save"
                    className="sm:ml-2"
                    onClick={() =>
                        handleSubmitEncryptionForm.current(onSubmit)()
                    }
                    disabled={isLoading}
                    loading={isLoading}
...
    );
};

//#region Vault account management
enum AccountDialogMode {
    Recover = "Recover",
    Register = "Register",
}
type AccountDialogTabBarProps = {
    currentFormMode: AccountDialogMode;
    changeFormMode: (
        newFormMode: AccountDialogMode.Recover | AccountDialogMode.Register,
    ) => void;
...
